# lpr-cpu

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  characterAlphabet.cpp  characterAlphabet.h  cmake_install.cmake  lpr  main.cpp
Material/: charDetection.cpp
Material_source/: Combine_RealTime.cpp  FinalApp.cpp  app.cpp  contourRotateHough.cpp  contoursCam.cpp  contoursRotate.cpp  detecNumber.cpp  detectViaHough.cpp  directionHistogram.cpp  findContoursInPlateRegconition.cpp  today.cpp  vhHisCam.cpp  vhHisContours.cpp  watersheds.cpp
